--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MyAppBooking</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="SignUp_u"><u>Sign Up</u></string>
+    <string name="SignIn_u"><u>Sign In</u></string>
+
 </resources>
